tests/ui/resolve/unresolved-segments-visibility.stderr
error[E0433]: cannot find module `String` in `string`
  --> $DIR/unresolved-segments-visibility.rs:8:34
   |
LL |         pub(in crate::b::string::String::newy) extern crate alloc as e;
   |                                  ^^^^^^ `String` is a struct, not a module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
